inline-block fix to -webkit-transform not working on mobile. "clearfix" to fix overlap on panel header on job_detail. Google Analytics hook. Significant changes to media queries, Angular radio button, and narrative on Portfolio.

--- a/resume/static/css/portfolio.css
+++ b/resume/static/css/portfolio.css
@@ -1,15 +1,23 @@
 p {
-    color: orange;
+    /*color: orange;*/
+    border-top: dotted black 2px;
+    padding-top: 10px;
 }
 
-@media not handheld {
-    .handheld {
+@media (min-width: 640px) {
+    .smallscreen {
         display: none;
     }
 }
 
-@media (min-width: 800px) {
-    .smallscreen {
+@media (max-width: 1440px) {
+    .largescreen {
+        display: none;
+    }
+}
+
+@media (min-width: 1440px) , (max-width: 640px) {
+    .mediumscreen {
         display: none;
     }
 }
@@ -24,4 +32,34 @@ p {
     .tallscreen {
         display: none;
     }
+}
+
+span {
+    display: inline-block;
+}
+
+.wider {
+    letter-spacing: 5px;
+    font-size: 1.2em;
+    color: purple;
+}
+
+.taller {
+    transform: scaleY(1.8);
+    font-size: 1.2em;
+    color: purple;
+}
+
+.small {
+    font-size: 0.7em;
+    color: brown;
+}
+
+.medium {
+    color: brown;
+}
+
+.large {
+    font-size: 1.3em;
+    color: brown;
 }
