--- a/resume/static/css/resume.css
+++ b/resume/static/css/resume.css
@@ -83,6 +83,7 @@ footer h4 {
 
 /* For that one dumb sideways image.  Also, now it plays nicely with paragraph text. */
 .front-page-image {
+    display: inline-block; /* Because webkit-based browsers ignore -webkit-transform on inline elements */
     width:120px;
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
